Diagrama UML y soporte de Maven

--- a/Testing/src/test/.gitignore
+++ b/Testing/src/test/.gitignore
@@ -4,3 +4,6 @@
 /GuiTestEnabledDisabled.class
 /GuiTestIngresos.class
 /TestPersistencia.class
+/TestAgregarProducto.class
+/TestAsignarMesaMozo.class
+/TestEliminacion.class
